Ensure that the comparison succeeded [Bug #17205]